--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #011627;
+  min-height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
 } 
